--- a/src/Example/UserRegistrationBundle/Resources/views/UserRegistration/registration_confirmation.html.twig
+++ b/src/Example/UserRegistrationBundle/Resources/views/UserRegistration/registration_confirmation.html.twig
@@ -24,14 +24,22 @@
  # POSSIBILITY OF SUCH DAMAGE.
  #}
 
-<h2>登録内容のご確認</h2>
+{% extends "ExampleUserRegistrationBundle:UserRegistration:layout.html.twig" %}
 
-<form action="{{ path('example_userregistration_userregistration_confirmationpost') }}" method="post" {{ form_enctype(form) }}>
-  {{ form_widget(form) }}
+{% block title %}{{ parent() }}登録内容のご確認{% endblock %}
 
-  <input type="submit" name="prev" value="修正する" />
-  <input type="submit" name="next" value="登録する" />
-</form>
+{% block content %}
+  <h2>登録内容のご確認</h2>
+
+  <div>
+    <form action="{{ path('example_userregistration_userregistration_confirmationpost') }}" method="post" {{ form_enctype(form) }}>
+      {{ form_widget(form) }}
+
+      <input type="submit" name="prev" value="修正する" />
+      <input type="submit" name="next" value="登録する" />
+    </form>
+  </div>
+{% endblock %}
 
 {#
  # Local Variables:
