--- a/src/Example/UserRegistrationBundle/Resources/views/UserRegistration/registration_input.html.twig
+++ b/src/Example/UserRegistrationBundle/Resources/views/UserRegistration/registration_input.html.twig
@@ -24,13 +24,21 @@
  # POSSIBILITY OF SUCH DAMAGE.
  #}
 
-<h2>ユーザー情報のご入力</h2>
+{% extends "ExampleUserRegistrationBundle:UserRegistration:layout.html.twig" %}
 
-<form action="{{ path('example_userregistration_userregistration_input') }}" method="post" {{ form_enctype(form) }}>
-  {{ form_widget(form) }}
+{% block title %}{{ parent() }}ユーザー情報のご入力{% endblock %}
 
-  <input type="submit" name="next" value="次へ" />
-</form>
+{% block content %}
+  <h2>ユーザー情報のご入力</h2>
+
+  <div>
+    <form action="{{ path('example_userregistration_userregistration_input') }}" method="post" {{ form_enctype(form) }}>
+      {{ form_widget(form) }}
+
+      <input type="submit" name="next" value="次へ" />
+    </form>
+  </div>
+{% endblock %}
 
 {#
  # Local Variables:
