--- a/src/Example/UserRegistrationBundle/Resources/views/UserRegistration/confirmation.html.twig
+++ b/src/Example/UserRegistrationBundle/Resources/views/UserRegistration/confirmation.html.twig
@@ -1,5 +1,5 @@
 {#
- # Copyright (c) 2012 KUBO Atsuhiro <kubo@iteman.jp>,
+ # Copyright (c) 2012, 2014 KUBO Atsuhiro <kubo@iteman.jp>,
  # All rights reserved.
  #
  # This file is part of PHPMentors_Training_Example_Symfony.
@@ -9,8 +9,16 @@
  # distribution, and is available at http://opensource.org/licenses/BSD-2-Clause
  #}
 
+{% extends "ExampleUserRegistrationBundle::layout.html.twig" %}
+
+{% block title %}{{ parent() }}登録内容のご確認{% endblock %}
+
+{% block content %}
 <h2>登録内容のご確認</h2>
 
-{{ form_start(form) }}
-{{ form_widget(form) }}
-{{ form_end(form) }}
+<div>
+  {{ form_start(form) }}
+  {{ form_widget(form) }}
+  {{ form_end(form) }}
+</div>
+{% endblock %}
