--- a/src/Example/UserRegistrationBundle/Resources/views/UserRegistration/registration_success.html.twig
+++ b/src/Example/UserRegistrationBundle/Resources/views/UserRegistration/registration_success.html.twig
@@ -31,7 +31,11 @@
 {% block content %}
   <h2>登録完了</h2>
 
-  <p>ユーザー登録が完了いたしました。ユーザーアカウントの有効化手続きのご案内についてメールを送信いたします。</p>
+  <div class="well">
+    <div class="container-fluid">
+      <p>ユーザー登録が完了いたしました。ユーザーアカウントの有効化手続きのご案内についてメールを送信いたします。</p>
+    </div>
+  </div>
 {% endblock %}
 
 {#
