--- a/src/Example/UserRegistrationBundle/Resources/views/UserRegistration/registration_input.html.twig
+++ b/src/Example/UserRegistrationBundle/Resources/views/UserRegistration/registration_input.html.twig
@@ -31,11 +31,13 @@
 {% block content %}
   <h2>ユーザー情報のご入力</h2>
 
-  <div>
+  <div class="well">
     <form action="{{ path('example_userregistration_userregistration_input') }}" method="post" {{ form_enctype(form) }}>
       {{ form_widget(form) }}
 
-      <input type="submit" name="next" value="次へ" />
+      <div class="form-actions">
+        <button class="btn btn-primary span1" type="submit" name="next"><b>次へ</b></button>
+      </div>
     </form>
   </div>
 {% endblock %}
