--- a/src/Example/UserRegistrationBundle/Resources/views/UserRegistration/confirmation.html.twig
+++ b/src/Example/UserRegistrationBundle/Resources/views/UserRegistration/confirmation.html.twig
@@ -17,12 +17,21 @@
 <h2>登録内容のご確認</h2>
 
 <div class="well">
+  <table class="table table-striped container">
+    <tbody>
+      <tr><th class="span3">入力項目</th><th>内容</th></tr>
+      <tr><td>名前</td><td>{{ user.lastName }} {{ user.firstName }}</td></tr>
+      <tr><td>メールアドレス</td><td>{{ user.email }}</td></tr>
+      <tr><td>パスワード</td><td>非表示</td></tr>
+    </tbody>
+  </table>
+
   {{ form_start(form) }}
-  {{ form_errors(form) }}
-  <div class="form-actions">
-    {{ form_widget(form.prev, {'attr': {'class': 'btn'}}) }}
-    {{ form_widget(form.next, {'attr': {'class': 'btn btn-primary'}}) }}
-  </div>
+    {{ form_errors(form) }}
+    <div class="form-actions">
+      {{ form_widget(form.prev, {'attr': {'class': 'btn'}}) }}
+      {{ form_widget(form.next, {'attr': {'class': 'btn btn-primary'}}) }}
+    </div>
   {{ form_end(form) }}
 </div>
 {% endblock %}
