--- a/src/Example/UserRegistrationBundle/Resources/views/UserRegistration/input.html.twig
+++ b/src/Example/UserRegistrationBundle/Resources/views/UserRegistration/input.html.twig
@@ -20,6 +20,10 @@
   {{ form_start(form) }}
   {{ form_errors(form) }}
   <div class="form-actions">
+    {{ form_row(form.lastName) }}
+    {{ form_row(form.firstName) }}
+    {{ form_row(form.email) }}
+    {{ form_row(form.password) }}
     {{ form_widget(form.next, {'attr': {'class': 'btn btn-primary'}}) }}
   </div>
   {{ form_end(form) }}
