--- a/src/Example/UserRegistrationBundle/Resources/views/UserRegistration/registration_confirmation.html.twig
+++ b/src/Example/UserRegistrationBundle/Resources/views/UserRegistration/registration_confirmation.html.twig
@@ -9,11 +9,21 @@
  # distribution, and is available at http://opensource.org/licenses/BSD-2-Clause
  #}
 
+{% extends "ExampleUserRegistrationBundle:UserRegistration:layout.html.twig" %}
+
+{% block title %}{{ parent() }}登録内容のご確認{% endblock %}
+
+{% block content %}
 <h2>登録内容のご確認</h2>
 
-<form action="{{ path('example_userregistration_userregistration_confirmationpost') }}" method="post" {{ form_enctype(form) }}>
+<div class="well">
+  <form action="{{ path('example_userregistration_userregistration_confirmationpost') }}" method="post" {{ form_enctype(form) }}>
     {{ form_widget(form) }}
 
-    <input type="submit" name="prev" value="修正する" />
-    <input type="submit" name="next" value="登録する" />
-</form>
+    <div class="form-actions">
+      <button type="submit" class="btn" name="prev"><b>修正する</b></button>
+      <button type="submit" class="btn btn-primary" name="next"><b>登録する</b></button>
+    </div>
+  </form>
+</div>
+{% endblock %}
