--- a/src/Example/UserRegistrationBundle/Resources/views/UserRegistration/registration_input.html.twig
+++ b/src/Example/UserRegistrationBundle/Resources/views/UserRegistration/registration_input.html.twig
@@ -9,10 +9,20 @@
  # distribution, and is available at http://opensource.org/licenses/BSD-2-Clause
  #}
 
+{% extends "ExampleUserRegistrationBundle:UserRegistration:layout.html.twig" %}
+
+{% block title %}{{ parent() }}ユーザー情報のご入力{% endblock %}
+
+{% block content %}
 <h2>ユーザー情報のご入力</h2>
 
-<form action="{{ path('example_userregistration_userregistration_inputpost') }}" method="post" {{ form_enctype(form) }}>
+<div class="well">
+  <form action="{{ path('example_userregistration_userregistration_inputpost') }}" method="post" {{ form_enctype(form) }}>
     {{ form_widget(form) }}
 
-    <input type="submit" name="next" value="次へ" />
-</form>
+    <div class="form-actions">
+      <button class="btn btn-primary span1" type="submit" name="next"><b>次へ</b></button>
+    </div>
+  </form>
+</div>
+{% endblock %}
